<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iAcron</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="remember">记住密码</string>
    <string name="automatic">自动登录</string>
    <string name="register_pass">密码</string>
    <string name="register_email">出生日期</string>
    <string name="register_qq">QQ号码</string>
    <string name="register_phone">手机号码</string>
    <string name="register_tel">座机电话</string>
    <string name="register_address">住址</string>
    <string name="register_age">年龄</string>
    <string name="register_sex">性别</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="register_name">用户名</string>
    <string name="register_config">确认密码</string>
    <string name="register_xingming">姓名</string>
    <string name="email_email">邮箱</string>
    <string name="land_phone_landname">登录名</string>

</resources>