<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".BrokenLineView" >

    <RelativeLayout
        android:id="@+id/acbuwa_topbar"
        style="@style/topbar_bg"
        android:layout_height="46dip" >

        <Button
            android:id="@+id/menuBtn"
            style="@style/topbar_right_btn"
            android:layout_width="35dip"
            android:layout_height="35dip"
            android:background="@drawable/u8" />

        <TextView
            android:id="@+id/topbar_title"
            style="@style/topbar_text" />
    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/acbuwa_topbar"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/content_text"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/register_name" />

                    <EditText
                        android:id="@+id/register_nickname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:drawableRight="@drawable/star_10px"
                        android:ems="10"
                        android:hint="必填项" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/content_text"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/register_phone" />

                    <EditText
                        android:id="@+id/register_phone"
                        android:layout_width="wrap_content" android:drawableRight="@drawable/star_10px"
                        android:layout_height="wrap_content"
                        android:ems="10" android:inputType="number"
                        android:hint="必填项" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:id="@+id/tableRow2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/content_text"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/register_pass" />

                    <EditText
                        android:id="@+id/register_password"
                        android:layout_width="wrap_content" android:password="true"
                        android:layout_height="wrap_content" android:drawableRight="@drawable/star_10px"
                        android:ems="10"
                        android:hint="必填项" >
                    </EditText>
                </TableRow>
 <TableRow
                    android:id="@+id/tableRow3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/content_text"
                        android:text="@string/register_config" />

                    <EditText
                        android:id="@+id/register_configpass" android:drawableRight="@drawable/star_10px"
                        android:layout_width="wrap_content" android:password="true"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="必填项" >
                    </EditText>
                </TableRow>
                
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/content_text"
                        android:layout_gravity="right|center_vertical"
                        android:text="邮箱" />

                    <EditText
                        android:id="@+id/register_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10" android:drawableRight="@drawable/star_10px"
                        android:hint="必填项" >
                    </EditText>
                </TableRow>

               
                <TableRow
                    android:id="@+id/tableRow4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/content_text"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/register_xingming" />

                    <EditText
                        android:id="@+id/register_name" android:hint="必填项"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:drawableRight="@drawable/star_10px"
                        android:ems="10" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/content_text"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/register_email" />

                    <EditText
                        android:id="@+id/register_brith"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:drawableRight="@drawable/star_10px"
                        android:ems="10" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/content_text"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/register_sex" />

                    <RadioGroup
                        android:id="@+id/radioGroup1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radio_nan"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/nan" />

                        <RadioButton
                            android:id="@+id/radio_nv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:text="@string/nv" />
                    </RadioGroup>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content" 
                    android:visibility="gone"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/content_text"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/register_age" />

                    <EditText
                        android:id="@+id/register_age"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/content_text"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/register_address" />

                    <EditText
                        android:id="@+id/register_address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/content_text"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/register_tel" />

                    <EditText
                        android:id="@+id/register_tel"
                        android:layout_width="wrap_content" android:hint="例如：010-88888888"
                        android:layout_height="wrap_content"
                        android:ems="10" >
                    </EditText>
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/content_text"
                        android:layout_gravity="right|center_vertical"
                        android:text="@string/register_qq" />

                    <EditText
                        android:id="@+id/register_qq"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:inputType="number"
                        android:ems="10" >
                    </EditText>
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/registerBt"
                style="@style/button_red"
                android:layout_width="90dip"
                android:layout_height="30dip"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dip"
                android:onClick="registerBt"
                android:text="立即注册" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>