<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".BrokenLineView" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                style="@style/content_text"
                android:layout_gravity="right|center_vertical"
                android:text="@string/register_name" />

            <EditText
                android:id="@+id/register_nickname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_gravity="right|center_vertical"
                android:text="@string/register_pass"
                 style="@style/content_text" />

            <EditText
                android:id="@+id/register_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:text="@string/register_config"
                 style="@style/content_text" />

            <EditText
                android:id="@+id/register_configpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_gravity="right|center_vertical"
                android:text="@string/register_xingming"
                 style="@style/content_text" />

            <EditText
                android:id="@+id/register_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" >
            </EditText>
        </TableRow>

        <Button
            android:id="@+id/register_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="确定" />
    </TableLayout>

</RelativeLayout>